<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Booth</string>
    <string name="account_balance" translatable="false">Account Balance</string>
    <string name="balance_currency" translatable="false" tools:ignore="MissingTranslation">$</string>
    <string name="balance_amount" translatable="false">524.99</string>
    <string name="youHaveAlreadyARequestPending">You\'ve already a request pending.</string>
    <string name="USERNAME">Username</string>
    <string name="USERNAMELIMIT">0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_</string>
    <string name="PASSWORD">Password</string>
    <string name="Login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="Registeration">Registeration</string>
    <string name="fullName">Full Name</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="DontHaveAnAccount">Dont\'t have an Account?</string>
    <string name="RegisterNow">Register Now</string>
    <string name="userType">USER TYPE</string>
    <string name="booth">BOOTH</string>
    <string name="customer">CUSTOMER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Varification">Varification</string>
    <string name="payment_account_bank_iban">Account Number ( IBAN)</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_branch_name">Bank - Branch Name</string>
    <string name="ReadMore">Read More</string>
    <string name="sponsored">Sponsored</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="Likes">Likes</string>
    <string name="share">Share</string>
    <string name="comments">Comments </string>
    <string name="SAR">SAR</string>
    <string name="booth_name">Booth Name</string>
    <string name="ratings">Ratings</string>
    <string name="wishlist">Wishlist</string>
    <string name="product_name">Indoor Crystal Chandelier lights</string>
    <string name="brand_title">Brand Name</string>
    <string name="brand_name">General Electric Company Spain</string>
    <string name="details_data">All the data about the product will be here.</string>
    <string name="payments_methos">Accepts cash, Credit card, sadad</string>
    <string name="payments_title">Payments</string>
    <string name="details_title">Details</string>
    <string name="condition_title">Condition</string>
    <string name="delivers_time">Delivers In</string>
    <string name="shipping_cost">Delivery Cost</string>
    <string name="returns">Returns</string>
    <string name="return_details">Accepts Returns, Bayer pays the returns shipment</string>
    <string name="price">Price in</string>
    <string name="price_unit">SAR</string>
    <string name="mobileEmailUser">Mobile Number / Username / Email</string>
    <string name="registerNew">Register Account</string>
    <string name="register_agreement">I agree to the terms and conditions defined by the Booth App</string>
    <string name="Confirm">Confirm</string>
    <string name="BoothAccount">Booth Account</string>
    <string name="BuyerAccount">Buyer Account</string>
    <string name="categoryTitle">Category Title</string>
    <string name="subCategoryName">Sub Category Name</string>
    <string name="selectCategories">Select Categories</string>
    <string name="titleOfProduct">Title of Product</string>
    <string name="condition">Product Condition</string>
    <string name="writeYourComment">Write your Comment</string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="grandTotal">Grand Total</string>
    <string name="checkout">Checkout</string>
    <string name="productTitle">Product Title</string>
    <string name="quantity">Quantity</string>
    <string name="rewardHistory">Reward History</string>
    <string name="olderNotifications">Older</string>
    <string name="Notifications">Notifications</string>
    <string name="Block">Block</string>
    <string name="Add">Add</string>
    <string name="DeliversIn">Delivers in</string>
    <string name="contactHours">Contact Hours</string>
    <string name="free">Free</string>
    <string name="ProductDetail">Product Details</string>
    <string name="MyProfile">My Profile</string>
    <string name="categories">Categories</string>
    <string name="booths">Booths</string>
    <string name="followers">Followers</string>
    <string name="editProfile">Edit Profile</string>
    <string name="Puchases">Purchases</string>
    <string name="likes">Likes</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="contactUs">Contact Us</string>
    <string name="sendUsFeedBackInquiries">Send us your inquiries/feedback</string>
    <string name="emailAddress">Email Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="details">Details</string>
    <string name="aboutUs">About Us</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="inviteWillBringYouRewards">Inviting friends will bring you reward points</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="send">Send</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sub_items">Sub Items</string>
    <string name="fillEmptyFields">Fill the required field</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="boothType">Booth Type</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="logo">Logo</string>
    <string name="suggestedBooths">Suggested Booths</string>
    <string name="addAProduct">Add a Product</string>
    <string name="productPicture">Product Picture</string>
    <string name="productVideo">Product Video</string>
    <string name="category">Category</string>
    <string name="Selectfirstcategory">Select First Category</string>
    <string name="subCategory">"Select second category "</string>
    <string name="subSubCategory">Select third category</string>
    <string name="availability">Availability</string>
    <string name="description">Description</string>
    <string name="brandName">Brand Name</string>
    <string name="itemCondition">Product Condition</string>
    <string name="verify">Verify</string>
    <string name="suggestedBoothsOnBasisOfYourInterests">Suggested Booths for you, based on your interests.</string>
    <string name="delivery">Delivery</string>
    <string name="deliveryCost">Delivery Cost</string>
    <string name="estimatedDeliveryTime">Estimated Delivery Time</string>
    <string name="averageRating">Average Rating</string>
    <string name="by">By</string>
    <string name="buyers">Buyers</string>
    <string name="ratingAndreviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="selectTheme">Select Theme</string>
    <string name="summerelec">\@summerelec</string>
    <string name="chooseInterests">Choose Interests</string>
    <string name="chooseInterests_subline">You can choose these interests from inside the app also</string>
    <string name="chooseCategories">Choose Categories</string>
    <string name="chooseCategories_subline">You can choose these Categories from inside the app also</string>
    <string name="available">Available</string>
    <string name="rating">Rating</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="follow">Follow</string>
    <string name="forgot">Forgot?</string>
    <string name="ExploreApp">Explore App</string>
    <string name="editBoothInformation">Edit Booth Information</string>
    <string name="pleaseSetTheme">Set theme fisrt</string>
    <string name="pleaseSelectContactDays">Select contact days</string>
    <string name="pleaseSelectContactHours">Select contact hours</string>
    <string name="selectColorSchemeFirst">Select color scheme first</string>
    <string name="viewMyBooth">View My Booth</string>
    <string name="editBooth">Edit Booth Information</string>
    <string name="tapToCustomizeYourBooth">Tap to customize your Booth</string>
    <string name="tapToEditYourBooth">Edit booth information</string>
    <string name="customizeBooth">Customize Booth</string>
    <string name="tapToEditYourInformation">Edit information</string>
    <string name="editInformation">Edit Information</string>
    <string name="UserAccount">User Account</string>
    <string name="switchToBuyerAccount">Switch to Buyer Account</string>
    <string name="contactBooth">Contact Booth</string>
    <string name="messageBooth">Message Booth</string>
    <string name="Call">Call</string>
    <string name="msg">Message</string>
    <string name="to">To</string>
    <string name="followings">Following</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="unfollow">Unfollow</string>
    <string name="workingOnIt">Mmm, working on it!</string>
    <string name="switch_account_string">Are you sure you want to Switch account?</string>
    <string name="logout_string">Are you sure you want to Logout?</string>
    <string name="interests">Interests</string>
    <string name="pleaseVerifyYourAccount">Verify your mobile or email first</string>
    <string name="report">Report</string>
    <string name="recipientName">Recipient Name</string>
    <string name="addressLineone">Address Line 1</string>
    <string name="buildingApartmentNo">Building, Apartment No.</string>
    <string name="confirmCheckout">Confirm Checkout</string>
    <string name="confirmAdress">Confirm Address</string>
    <string name="pinYourLocation">Pin Your Location</string>
    <string name="addressTitle">Title (Home, Work etc)</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="requestCheckout">Request CheckOut</string>
    <string name="questiondetail">Question Detail</string>
    <string name="viewpreviouscomments">View Previous Comments</string>
    <string name="writeacomment"><u>Write a Comment</u></string>
    <string name="viewprofile">View My Profile</string>
    <string name="viewaddress">View Address</string>
    <string name="cancleorder">Cancel</string>
    <string name="later">Later</string>
    <string name="no_notification">"No notiﬁcations yet! "</string>
    <string name="proceed_to_summary">Proceed to Summary</string>
    <string name="approve_order_title">Approve</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_charges">Delivery Cost</string>
    <string name="apply">Apply</string>
    <string name="mypromocode">My Promo Codes</string>
    <string name="validtill">Valid Till</string>
    <string name="amount">Amount</string>
    <string name="usage">Usage</string>
    <string name="discounttype">Discount Type (% or fixed)</string>
    <string name="promoTitle">Promo Title</string>
    <string name="promo_code">Promo Code</string>
    <string name="select_quantity">Write your quantity</string>
    <string name="orderNumber">Order No.</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="update">Update</string>
    <string name="addressLinetwo">Address Line 2</string>
    <string name="second_category">Second Category</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="descending">Descending</string>
    <string name="create_an_address">Create an Address</string>
    <string name="create">Create</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>