<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/HeadingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/create_an_address"
        android:textColor="@color/orange" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addressTitle"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/addressTitle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/recipientName"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/recipientName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/emailAddress"
                android:inputType="textWebEmailAddress" />


            <EditText
                android:id="@+id/phone"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/mobileNumber"
                android:inputType="phone" />


            <EditText
                android:id="@+id/address"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:hint="@string/addressLineone"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/address2"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="false"
                android:hint="@string/addressLinetwo"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true" />


            <EditText
                android:id="@+id/city"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/city"
                android:inputType="text" />


            <EditText
                android:id="@+id/buildingNo"
                style="@style/EditText"
                android:layout_marginTop="20dp"
                android:hint="@string/buildingApartmentNo"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/TextView"
                    android:layout_width="0sp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_lightblack_btn"
                    android:text="@string/Cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_create"
                    style="@style/TextView"
                    android:layout_width="0sp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_orange_btn"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>