<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_your_search"
        android:textColor="@color/orange"
        android:gravity="center"
        android:layout_marginTop="10dp"
        style="@style/HeadingsTextView"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/category"
                style="@style/EditText"
                android:hint="@string/category"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/subcategory"
                style="@style/EditText"
                android:hint="@string/second_category"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/item"
                style="@style/EditText"
                android:hint="@string/subSubCategory"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/sortby"
                style="@style/EditText"
                android:hint="@string/descending"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/city"
                style="@style/EditText"
                android:hint="@string/city"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0sp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corners_lightblack_btn"
                    android:text="@string/Cancel"
                    android:textAllCaps="false"
                    style="@style/TextView"/>

                <Button
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:id="@+id/btn_apply"
                    android:layout_width="0sp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_corners_orange_btn"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    style="@style/TextView"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>