<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    tools:context=".Activities.AddPromoCode">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypromocode"
            android:fontFamily="@font/robotomedium"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/orange"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <TextView
                android:layout_marginTop="@dimen/_50sdp"
                android:id="@+id/promo_disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotomedium"
                />

            <EditText
                android:id="@+id/promo_title"
                android:inputType="text"
                android:layout_marginTop="@dimen/_40sdp"
                android:hint="@string/promoTitle"
                style="@style/EditText"/>

            <EditText
                android:id="@+id/promo_code"
                android:inputType="text"
                android:layout_marginTop="30dp"
                android:hint="@string/promo_code"
                style="@style/EditText"/>

            <TextView
                android:id="@+id/valid_till"
                android:layout_marginTop="30dp"
                android:hint="@string/validtill"
                android:gravity="center_vertical"
                style="@style/EditText"/>

            <AutoCompleteTextView
                android:id="@+id/discount_type"
                android:layout_marginTop="30dp"
                style="@style/EditText"
                android:hint="@string/discounttype"
                android:drawableRight="@drawable/drop_down_black"
                android:focusableInTouchMode="false" />

            <EditText
                android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:layout_marginTop="30dp"
                android:hint="@string/amount"
                style="@style/EditText"/>

            <EditText
                android:id="@+id/usage"
                android:inputType="number"
                android:layout_marginTop="30dp"
                android:hint="@string/usage"
                android:visibility="gone"
                style="@style/EditText"/>

            <Button
                android:id="@+id/promo_submit"
                android:layout_marginTop="@dimen/_50sdp"
                android:elevation="2dp"
                android:textColor="@color/white"
                style="@style/OrangeBtn"
                android:layout_marginLeft="@dimen/_75sdp"
                android:layout_marginRight="@dimen/_75sdp"
                android:text="@string/Submit"
                android:fontFamily="@font/robotomedium"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corners_orange_btn"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>