<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:background="@drawable/custom_dialog_background">

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/orange"
        android:gravity="center"
        android:layout_marginTop="10dp"
        style="@style/HeadingsTextView"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:id="@+id/et_password"
                android:hint="@string/current_password"
                style="@style/EditText"/>

            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:id="@+id/et_newpassword"
                android:hint="@string/new_password"
                style="@style/EditText"/>


            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:id="@+id/et_repassword"
                android:hint="@string/confirm_password"
                style="@style/EditText"/>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/btn_cancel"
                    android:layout_width="0sp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corners_lightblack_btn"
                    android:text="@string/Cancel"
                    android:textAllCaps="false"
                    style="@style/TextView"/>

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/btn_update"
                    android:layout_width="0sp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_corners_orange_btn"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    style="@style/TextView"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>