<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/custom_dialog_background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <TextView
        style="@style/HeadingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_quantity" />


    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/getPrice"
        android:maxLength="2"
        style="@style/EditText"
        android:digits="0123456789"
        android:inputType="number"
        android:hint="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/TextView"
            android:layout_width="0sp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners_lightblack_btn"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_add"
            style="@style/TextView"
            android:layout_width="0sp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_orange_btn"
            android:text="@string/Add"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>